apps/fleetstorm/fleetstorm-ui/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleetstorm-ui-ingress
  labels:
    app: fleetstorm-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # Default cache for all requests
      add_header Cache-Control "public, max-age=2592000";   # 1 month
      # Override for specific file types
      if ($request_uri ~* \.(css|webp)$) { 
        add_header Cache-Control "public, max-age=2592000"; # 1 monthy
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fleetstorm.kalkutin.dev
      secretName: kalkutin-dev-tls
  rules:
    - host: fleetstorm.kalkutin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetstorm-ui-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fleetstorm-core-service
                port:
                  number: 3000
